@@ -5,6 +5,7 @@
 - Corrigido problema na caixa Novo Download
 - Agora é possível mudar o idioma sem reiniciar
   o programa
+- Adicionada barra de progresso segmentada
 
 0.4.3
 ===================================================
